--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "marked": "^0.3.6",
     "npm-run-all": "^4.0.1",
     "react": "^15.4.2",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "styled-components": "^1.4.1"
   },
